--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Самые популярные книги</title>
 </head>
-<body>
+<body bgcolor="gray">
     <b><a href="index.html">Самые популярные книги</a></b>
     <br>
     <a href = "list.html">Список самых популярных книг</a>
