--- a/list.html
+++ b/list.html
@@ -20,12 +20,12 @@
             <td>
               <input type="radio" name="ox" value="0">Автор<br>
               <input type="radio" name="ox" value="1">Год<br>
-              <input type="radio" name="ox" value="3">Издательство<br>
+              <input type="radio" name="ox" value="2">Издательство<br>
             </td>
             <td>
               <input type="checkbox" name="oy" value="0">Максимальное количество страниц<br>
               <input type="checkbox" name="oy" value="1">Минимальное количество страниц<br>
-			  <input type="checkbox" name="oy" value="3">Количество книг<br>
+			  <input type="checkbox" name="oy" value="2">Количество книг<br>
             </td>
           </tr>
         </tbody></table>
@@ -37,20 +37,20 @@
     <summary> Фильтр</summary>
     <form>
         <p>
-           <label for="structure">Название:</label>
-		   <input type="text" name="structure">
+           <label for="name">Название:</label>
+		   <input type="text" name="name">
         </p>
         <p>
-		    <label for="category">Автор:</label>
-            <input type="text" name="category">
+		    <label for="author">Автор:</label>
+            <input type="text" name="author">
         </p>
         <p>
-		   <label for="country">Издательство:</label>
-          <input type="text" name="country">
+		   <label for="productiong">Издательство:</label>
+          <input type="text" name="production">
         </p>
 		 <p>
-		   <label for="city">Год издания:</label>
-           <input type="text" name="city">
+		   <label for="year">Год издания:</label>
+           <input type="text" name="year">
         </p>
  		 <p>
 		  <label for="yFrom">Кол-во страниц: </label>
